# fixprice_api

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  fixprice_api.rst  index.rst  quick_start.rst
docs/source/_api/: fixprice_api.endpoints.advertising.rst  fixprice_api.endpoints.catalog.rst  fixprice_api.endpoints.general.rst  fixprice_api.endpoints.geolocation.rst  fixprice_api.endpoints.rst  fixprice_api.manager.rst
fixprice_api/: __init__.py  abstraction.py  api.py  manager.py  tools.py
fixprice_api/endpoints/: advertising.py  catalog.py  general.py  geolocation.py
tests/: api_test.py  conftest.py
tests/__snapshots__/: ClassAdvertising.home_brands_list.json  ClassAdvertising.home_brands_list.schema.json  ClassCatalog.products_list.json  ClassCatalog.products_list.schema.json  ClassCatalog.tree.json  ClassCatalog.tree.schema.json  ClassGeolocation.cities_list.json  ClassGeolocation.cities_list.schema.json  ClassGeolocation.city_info.json  ClassGeolocation.city_info.schema.json  ClassGeolocation.countries_list.json  ClassGeolocation.countries_list.schema.json  ClassGeolocation.my_geoposition.schema.json  ClassGeolocation.regions_list.json  ClassGeolocation.regions_list.schema.json  ProductService.balance.json  ProductService.balance.schema.json  ProductService.info.json  ProductService.info.schema.json  ShopService.search.json  ShopService.search.schema.json  unstandard_headers.json  unstandard_headers.schema.json  unstandard_urls.json  unstandard_urls.schema.json
