[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixprice_api"
dynamic = ["version"]
description = "A Python API client for FixPrice catalog"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Miskler" }
]
keywords = ["api", "fixprice", "store", "catalog"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "camoufox[geoip]",
    "human_requests",
    "aiohttp",
    "aiohttp-retry"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-anyio",
    "pytest-jsonschema-snapshot",
    "jsoncrack-for-sphinx",
]

[project.urls]
Homepage = "https://github.com/Open-Inflation/fixprice_api"
Repository = "https://github.com/Open-Inflation/fixprice_api"
Documentation = "https://open-inflation.github.io/fixprice_api/quick_start"

[tool.setuptools.dynamic]
version = { attr = "fixprice_api.__version__" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["*_test.py", "*_tests.py"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:Event loop is closed:RuntimeWarning",
]
anyio_mode = "auto"
autotest_start_class = "fixprice_api.FixPriceAPI"
addopts = "-v --tb=short --disable-warnings"
